fixed flickering upon re-rendering

--- a/src/5.2.ToastNotification.css
+++ b/src/5.2.ToastNotification.css
@@ -29,7 +29,7 @@
   align-items: center;
 
   z-index: 1;
-  /* animation: fadeIn 0.5s forwards, fadeOut 0.5s 2.5s forwards; */
+  animation: fadeIn 0.5s forwards, fadeOut 0.5s 2s forwards;
 
   /* transition-duration: 2s; */
   pointer-events: all;
